deployment/k8s/infrastructure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-template
  labels:
    name: go-template
