deployment/k8s/infrastructure/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - image: heidiks/rabbitmq-delayed-message-exchange:3.7.23-management
          name: rabbitmq
          ports:
            - containerPort: 5672
              name: rabbitmq-amqp
            - containerPort: 15672
              name: rabbitmq-http
          volumeMounts:
            - name: rabbitmq-persistent-storage
              mountPath: /data
      volumes:
        - name: rabbitmq-persistent-storage
          persistentVolumeClaim:
            claimName: rabbitmq-volume
