deployment/k8s/infrastructure/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - name: tcp
      port: 3306
      targetPort: 3306
      protocol: TCP
