deployment/k8s/infrastructure/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp-tcp
      port: 5672
      targetPort: 5672
      protocol: TCP
    - name: http-tcp
      port: 15672
      targetPort: 15672
      protocol: TCP
