deployment/k8s/infrastructure/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: virtual-host-ingress
  namespace: go-template
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: INSERT_ISSUER
    external-dns.alpha.kubernetes.io/hostname: INSERT_URL
    external-dns.alpha.kubernetes.io/ttl: "1"
spec:
  tls:
    - secretName: go-template-k3s-tls
      hosts:
        - INSERT_URL
  rules:
    - host: INSERT_URL
      http:
        paths:
          - path: /api
            backend:
              serviceName: go-tmpl-backend
              servicePort: 80
